--- a/relazione.tex
+++ b/relazione.tex
@@ -99,17 +99,17 @@ Data una Degree Matrix \(D\) ed un Laplaciano \(L\), si dice che un vettore \(\v
 
 Per Spectral Drawing di un grafo si intende fare uso di un algoritmo di visualizzazione basato sull'utilizzo degli autovalori non nulli più bassi del Laplaciano e dei corrispettivi autovalori. Tale tecnica assume anche il nome di \textit{Eigen-Projection Method}.
 L'uso del Laplaciano per il disegno di un grafo ha solide giustificazioni matematiche e permette di ottenere risultati di visualizzazione molto validi e significativi.
-Si analizzeranno ora tali giustificazioni matematiche e si esploreranno alcune varianti dello Spectral Drawing.
+Si analizzano ora tali giustificazioni matematiche e si esplorano alcune varianti dello Spectral Drawing.
 
 \subsection{Derivazione dell'Eigen-Projection Method}\label{subsec:eigen-projection}
 
 Si introduce l'Eigen-Projection Method come soluzione ad un problema di minimizzazione. Si presenta tale problema per il disegno di un grafo su di una dimensione, per poi espanderlo ad un numero arbitrario di dimensioni.
 
 Sia dato un grafo pesato \(G(V,E)\), indichiamone il suo layout monodimensionale con un vettore \(\vb{x} \in \mathcal{R}^n\), dove \(x_i\) è la posizione del nodo \(i\). Si vuole che \(\vb{x}\) sia la soluzione del seguente problema di minimizzazione:
-\begin{gather}
-    \min_{\vb{x}} \E(\vb{x}) = \sum_{\langle i, j\rangle \in E} w_{ij}{(x_i - x_j)}^2 \label{eq:minimization}\\
-    \Var(\vb{x}) = 1
-\end{gather}
+\begin{align}
+    &\min_{\vb{x}} \E(\vb{x}) = \sum_{\langle i, j\rangle \in E} w_{ij}{(x_i - x_j)}^2 \label{eq:minimization}\\
+    &\Var(\vb{x}) = 1
+\end{align}
 dove \(\Var(\vb{x})\) è la varianza di \(\vb(x)\) definita in questo contesto come \(\Var(\vb{x}) = \frac{1}{n}\sum_{i=1}^n {(x_i - \bar{x})}^2\), dove \(\bar{x}\) è la media delle componenti di \(\vb{x}\).
 
 Questo problema di minimizzazione dell'energia punta a mantenere minime le lunghezze dei link di connessione.
@@ -128,13 +128,44 @@ Facendo ricorso al Lemma~\ref{lem:laplaciano_quadratico}, si può riscrivere l'e
 A questo punto, è possibile descrivere il layout unidimensionale \(\vb{x}\) come la soluzione del problema di minimizzazione vincolato:
 \begin{align}
     & \min_{\vb{x}} \vb{x}^T L\vb{x}\\
-    & \text{dato:} \vb{x}^T\vb{x} = 1 \\
-    & \text{nel sottospazio:} \vb{x}^T \cdot 1_n = 0
+    & \text{dato: } \vb{x}^T\vb{x} = 1 \\
+    & \text{nel sottospazio: } \vb{x}^T \cdot 1_n = 0
 \end{align}
 Tale problema rientra nella cateogoria dei \textit{Constrained Quadratic Optimization Problems}.
 Si analizzano nel dettaglio tali problemi in Appendice~\ref{sec:soluzione_constrained}, dove nel dettaglio si dimostra (ponendo \(B=I\) nel Teorema~\ref{thr:soluzione_ottimizzazione}) che la soluzione ottimale corrisponde a \(\vb{x} = \vb{v}_2\), il secondo autovettore più piccolo del Laplaciano \(L\).
 
-\subsection{Spectral Drawing tramite autovettori Degree-Normalized}
+Per ottenere uno Spectral Drawing bidimensionale, è necessario computare un vettore addizionale di coordinate \(\vb{y}\).
+Si richiede quindi che non vi sia alcuna correlazione tra \(\vb{x}\) ed \(\vb{y}\) e che la nuova dimensione abbia la massima quantità di nuova informazione sulla natura del grafo.
+Questo si traduce nel richiedere semplicemente che \(\vb{y}^T \cdot \vb{x} = \vb{y}^T \cdot \vb{v}_2 = 0\). In altre parole si vuole che \(\vb{y}\) sia la soluzione del problema di minimizzazione vincolato:
+\begin{align}
+    & \min_{\vb{y}} \vb{y}^T L\vb{y}\\
+    & \text{dato: } \vb{y}^T\vb{y} = 1 \\
+    & \text{nel sottospazio: } \vb{y}^T \cdot 1_n = 0, \vb{y}^T \cdot \vb{v}_2 = 0
+\end{align}
+Con lo stesso procedimento nel caso 1D e facendo uso sempre del Teorema~\ref{thr:soluzione_ottimizzazione}, si ha che la soluzione ottimale è \(\vb{y}=v_3\), il terzo autovettore più piccolo di \(L\).
+Portando avanti lo stesso ragionamento per il numero di dimensioni sulle quali si desidera eseguire il disegno, è possibile eseguire lo Spectral Drawing di un grafo su di un numero arbitrario di dimensioni.
+
+\subsection{Spectral Drawing tramite autovettori Degree-Normalized}\label{subsec:alt_spectral}
+
+In questa sottosezione si tratta un metodo alternativo di Spectral Drawing associato ad alcuni autovettori generalizzati del Laplaciano.
+
+Supponiamo di `pesare' i nodi con il loro degree, di modo che la massa del nodo \(i\) sia il suo \(\deg(i)\).
+Se quindi riprendiamo il problema originale di minimizzazione~\eqref{eq:minimization} e pesiamo la somma rispetto alla massa dei nodi, otteniamo il seguente problema di minimizzazione vincolato pesato sul degree dei nodi (\(D\) è la Degree Matrix):
+\begin{align}
+    & \min_{\vb{x}} \vb{x}^T L \vb{x} \label{eq:with_degree}\\
+    & \text{dato: } \vb{x}^T D \vb{x} = 1\\
+    & \text{nel sottospazio: } \vb{x}^T D 1_n = 0\\
+\end{align}
+Lavorando sempre con il Teorema~\ref{thr:soluzione_ottimizzazione} sostituendo però \(B\) con \(D\), si ottiene \(\vb{x} = \vb{u}_2\), il secondo autovettore generalizzato più piccolo di \((L, D)\).
+Utilizzando lo stesso ragionamento mostrato in Sottosezione~\ref{subsec:eigen-projection}, si può far uso degli autovettori associati agli autovalori generalizzati non nulli più piccoli di \((L, D)\).
+
+Questo diverso approccio presenta diversi punti di forza per certi problemi di visualizzazione.
+Per poter comprendere in che modo questa variazione ha effetto sul risultato finale, si può considerare il problema~\eqref{eq:with_degree} nella forma equivalente:
+\begin{align}
+    & \min_{\vb{x}} \frac{\vb{x}^T L \vb{x}}{\vb{x}^T D \vb{x}} \label{eq:with_degree_equivalent}\\
+    & \text{nel sottospazio: } \vb{x}^T D 1_n = 0\\
+\end{align}
+Nel problema~\eqref{eq:with_degree_equivalent}, si ha che il denominatore modera il comportamento del numeratore.
 
 \section{Perturbazioni e modifiche del Laplaciano}\label{sec:perturbazioni}
 
