Add bibliografia.bib and bib backend

--- a/relazione.tex
+++ b/relazione.tex
@@ -27,15 +27,15 @@
 \newtheorem{proof}{Dimostrazione}[section]
 
 %%% BackEnd Bibliografico
-%\usepackage{textcomp}
-%\usepackage[autostyle]{csquotes}
-%\usepackage[
-%        backend=biber,
-%        %bibstyle=numeric,
-%        %sorting=ynt
-%    ]{biblatex}
-%\addbibresource{bibliografia.bib}
-%\nocite{*}
+\usepackage{textcomp}
+\usepackage[autostyle]{csquotes}
+\usepackage[
+        backend=biber,
+        %bibstyle=numeric,
+        %sorting=ynt
+    ]{biblatex}
+\addbibresource{bibliografia.bib}
+\nocite{*}
 %%%
 
 %%%%%% TESTO EFFETTIVO
@@ -200,6 +200,8 @@ Si ha da evidenziare che \(D^{-1} A\) è anche nota come \textit{Transition Matr
 \subsection{Toy Models 2D}
 
 \subsection{Toy Models 3D}
+
+\printbibliography
 
 \appendix
 \section{Soluzione al Constrained Quadratic Optimization Problem}\label{sec:soluzione_constrained}
